fix: use pretty text-wrapping

--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -6,7 +6,7 @@ $gutter: 0 !default;
 
   line-height: 1.3;
 
-  text-wrap: balance;
+  text-wrap: pretty;
 
 
   em {
